Attempt ReadTheDocs.org bug fix
Attempt to fix bad branch reference.

--- a/docs/sphinx/requirements.txt
+++ b/docs/sphinx/requirements.txt
@@ -1,2 +1,2 @@
 mock
--e git+http://github.com/chajadan/dragonfly/tree/docs_enabler#egg=dragonfly
+-e git+http://github.com/chajadan/dragonfly/@docs_enabler#egg=dragonfly
